Fixed spacing on 2xl for about page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -103,13 +103,13 @@ footer {
   }
 }
 
-@media screen and (min-width: 1440px) {
+/* @media screen and (min-width: 1440px) {
   body main > * > *:not(:first-child),
   footer > * {
     max-width: 1440px;
     margin: 0 auto;
   }
-}
+} */
 
 h1,
 h2,
